--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -9,8 +9,11 @@ COPY ./package*.json ./
 RUN npm install
 COPY . .
 
+# Generar la build de producción
+RUN npm run build
+
 # Exponer el puerto del frontend
 EXPOSE 3000
 
 # Ejecutar en modo producción
-CMD ["npm", "run", "dev"]
+CMD ["npm", "run", "start"]
